--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "bulma-toast": "^2.4.1",
     "firebase-tools": "^9.21.0",
     "react": "^17.0.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-line-graph": "^1.0.6",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
